--- a/gitco-pilot-øv/css/_partials.scss
+++ b/gitco-pilot-øv/css/_partials.scss
@@ -2,5 +2,5 @@ $primary-btn: #779892;
 $footer: #425348;
 $bg: #f3f4ef;
 
-$font: roboto;
+$font-family: 'roboto', sans-serif;
 $font-color: #3c3c3c
