gået i gang med stylingen

--- a/gitco-pilot-øv/css/_partials.scss
+++ b/gitco-pilot-øv/css/_partials.scss
@@ -1,6 +1,6 @@
-$primary-btn: #779892;
+$primary-btn: #779882;
 $footer: #425348;
-$bg: #f3f4ef;
+$primary-bg: #f3f4ef;
 
 $font-family: 'roboto', sans-serif;
 $font-color: #3c3c3c
