--- a/gitco-pilot-øv/css/style.css
+++ b/gitco-pilot-øv/css/style.css
@@ -1,1 +1,42 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  background-color: #f3f4ef;
+  font-family: "roboto", sans-serif;
+  color: #3c3c3c;
+}
+
+header {
+  background-color: #779882;
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+
+.card {
+  background-color: #425348;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 320px;
+  color: white;
+}
+
+img {
+  max-width: 100%;
+  height: 80px;
+}
+
+.info-box {
+  display: flex;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+.info-box > p {
+  flex: 1;
+}
+
+.section {
+  margin: 20px 0;
+  background-color: white;
+}/*# sourceMappingURL=style.css.map */
